✅ Task 2 completed: basic CUDA heat propagation and average calculation, verified, supports full timing and comparison

--- a/cuda_assign2/Makefile
+++ b/cuda_assign2/Makefile
@@ -1,39 +1,41 @@
-# 编译器与编译选项
-CXX      = g++
-NVCC     = nvcc
-CXXFLAGS = -O3 -std=c++11 -Wall -Wextra -I./src
-NVFLAGS  = -O3 -std=c++11 -I./src
+# Makefile for CUDA + C++ hybrid project
 
-# 文件路径
-SRC_DIR  = src
-CPPSRC   = $(SRC_DIR)/main.cpp $(SRC_DIR)/radiator_cpu.cpp
-CU_SRC   = $(SRC_DIR)/radiator_gpu.cu
-HEADERS  = $(SRC_DIR)/radiator_cpu.h $(SRC_DIR)/radiator_gpu.h $(SRC_DIR)/timer.h $(SRC_DIR)/timer_cuda.h
+# 编译器设置
+NVCC        = nvcc
+CXX         = g++
+CXXFLAGS    = -O2 -std=c++17
+NVCCFLAGS   = -O2 -std=c++17 -Xcompiler="-fopenmp" -arch=sm_75
 
-# 对象文件
-OBJ_CPP  = $(CPPSRC:.cpp=.o)
-OBJ_CU   = $(CU_SRC:.cu=.o)
-TARGET   = radiator_exec
+# 路径
+INCLUDE     = -I./src
+SRC_DIR     = src
+OBJ_DIR     = obj
+BIN         = radiator_exec
 
-# 默认目标
-all: $(TARGET)
+# 源文件列表
+CPP_SRCS    = $(SRC_DIR)/main.cpp $(SRC_DIR)/radiator_cpu.cpp
+CU_SRCS     = $(SRC_DIR)/radiator_gpu.cu
+OBJS        = $(OBJ_DIR)/main.o $(OBJ_DIR)/radiator_cpu.o $(OBJ_DIR)/radiator_gpu.o
 
-# 链接
-$(TARGET): $(OBJ_CPP) $(OBJ_CU)
-	$(NVCC) $(NVFLAGS) -o $@ $^
+# 生成目标
+all: $(BIN)
 
-# main.cpp 用 nvcc 编译（因为它引用了 cuda_runtime.h）
-$(SRC_DIR)/main.o: $(SRC_DIR)/main.cpp $(HEADERS)
-	$(NVCC) $(NVFLAGS) -c $< -o $@
+$(BIN): $(OBJS)
+	$(NVCC) $(NVCCFLAGS) $(INCLUDE) -o $@ $^
 
-# 其他 .cpp 文件用 g++ 编译
-$(SRC_DIR)/%.o: $(SRC_DIR)/%.cpp $(HEADERS)
-	$(CXX) $(CXXFLAGS) -c $< -o $@
+# 使用 nvcc 编译包含 cuda_runtime.h 的 .cpp 文件（如 main.cpp）
+$(OBJ_DIR)/main.o: $(SRC_DIR)/main.cpp
+	$(NVCC) $(NVCCFLAGS) $(INCLUDE) -c $< -o $@
 
-# .cu 文件编译
-$(SRC_DIR)/%.o: $(SRC_DIR)/%.cu $(HEADERS)
-	$(NVCC) $(NVFLAGS) -c $< -o $@
+$(OBJ_DIR)/radiator_cpu.o: $(SRC_DIR)/radiator_cpu.cpp
+	$(CXX) $(CXXFLAGS) $(INCLUDE) -c $< -o $@
+
+$(OBJ_DIR)/radiator_gpu.o: $(SRC_DIR)/radiator_gpu.cu
+	$(NVCC) $(NVCCFLAGS) $(INCLUDE) -c $< -o $@
 
 # 清理
 clean:
-	rm -f $(SRC_DIR)/*.o $(TARGET)
+	rm -rf $(OBJ_DIR)/*.o $(BIN)
+
+# 自动创建 obj 目录（可选）
+$(shell mkdir -p $(OBJ_DIR))
